# claude-code-env-manager

./: .gitignore  CLAUDE.md  README.md  environment-caching.md  index.html  package.json  pnpm-lock.yaml  setup.bat  setup.sh  start-dev.bat  start-dev.sh  tsconfig.tsbuildinfo  vite.config.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
src/components/: EnvironmentForm.vue  EnvironmentList.vue
src/stores/: environment.ts
src/types/: environment.ts
src/utils/: fileOperations.ts  validation.ts
src/views/: HomeView.vue
